Append about_us page

--- a/home/templates/home/about_us.html
+++ b/home/templates/home/about_us.html
@@ -10,17 +10,17 @@
 {% endblock %}
 
 {% block content %}
-<div class="container h-100">
-    <div class="row h-100">
-        <div class="col-7 col-md-6 my-auto">
-            <div class="my-5">
-                <h2 class="text-white">Welcome to Shavers Haven</h2>
+<div class="container h-100 py-4">
+    <div class="row justify-content-center h-100">
+        <div class="col-12 my-auto">
+            <div class="my-2">
+                <h2 class="text-navy">Welcome to Shavers Haven</h2>
                 <div class="justify-content-center">
-                    <p class="bg-white py-3">
-                        Welcome to Shavers Haven – Your Ultimate Destination for the Art of Grooming. At Shavers Haven, we are dedicated to revolutionizing your 
+                    <p class="shadow-sm">
+                        Your Ultimate Destination for the Art of Grooming. <br><br> At Shavers Haven, we are dedicated to revolutionizing your 
                         shaving experience, offering a curated selection of double edge razors, traditional razors, lathering products, and brushes – everything a 
-                        modern gentleman needs for the ultimate shave. Our journey began with a simple purpose: to introduce the solution of safe shaving, meticulously designed to minimize skin irritation. We believe that every man deserves a comfortable and irritation-free shave that empowers them to confidently present their best self. As an exclusively online ecommerce business, Shavers Haven is committed to providing you with top-tier grooming essentials delivered directly to your doorstep, eliminating the need for physical stores. Our collection of double edge razors and traditional shaving tools ensures precision and gentleness, while our lathering products and brushes enhance your routine. We take pride in being your partner on the path to a flawless grooming experience. Shavers Haven isn't just about shaving – it's about embracing confidence and skin well-being with each and every shave.
-                         Your journey to a better shave begins with us.
+                        modern gentleman needs for the ultimate shave. <br><br> Our journey began with a simple purpose: to introduce the solution of safe shaving, meticulously designed to minimize skin irritation. We believe that every man deserves a comfortable and irritation-free shave that empowers them to confidently present their best self. As an exclusively online ecommerce business, Shavers Haven is committed to providing you with top-tier grooming essentials delivered directly to your doorstep, eliminating the need for physical stores. Our collection of double edge razors and traditional shaving tools ensures precision and gentleness, while our lathering products and brushes enhance your routine. We take pride in being your partner on the path to a flawless grooming experience. Shavers Haven isn't just about shaving – it's about embracing confidence and skin well-being with each and every shave.
+                        <br><br>Your journey to a better shave begins with us!
                     </p>
                 </div>
                 <h4>
