Validate files & start readme testing

--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -34,7 +34,7 @@
             <hr>
             <div class="row py-3">
                 <div class="col-12 text-center ">
-                    <p><i class="bi bi-c-circle"></i></i>&nbsp; Ian Garrigan &nbsp;<a
+                    <p><i class="bi bi-c-circle"></i>&nbsp; Ian Garrigan &nbsp;<a
                             href="https://github.com/Ian-Garrigan/shavers-haven/" target="_blank" rel="noopener nofollow"
                             aria-label="Visit my Github"><iconify-icon icon="logos:github-icon" width="20"></iconify-icon></a></p>
                 </div>
